envoy_splicing_bumping.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 172.16.4.9
      port_value: 8001
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 1234
    listener_filters:
    - name: envoy.filters.listener.tls_inspector
    - name: envoy.filters.listener.connect_handler
    filter_chains:
    - filter_chain_match:
        server_names: ["www.baidu.com", "www.google.com"]  # bumping w/ connect or w/o connect
      filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: dynamic_forward_proxy_cluster_bumping
          http_filters:
          - name: envoy.filters.http.dynamic_forward_proxy
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
              dns_cache_config:
                name: dynamic_forward_proxy_cache_config
                dns_lookup_family: V4_ONLY
          - name: envoy.filters.http.router

      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_root_ca_certificate:
              cert:
                inline_string: |
                  -----BEGIN CERTIFICATE-----
                  MIIFWTCCA0GgAwIBAgIUdMXgXhEMwcXCCNeQGL9ARPWMWHowDQYJKoZIhvcNAQEL
[...]
                  A3t5xUjMepZvD7/HpEcU2lP6pE75sZHCiz3wq+E=
                  -----END CERTIFICATE-----
              private_key:
                inline_string: |
                  -----BEGIN PRIVATE KEY-----
                  MIIJRAIBADANBgkqhkiG9w0BAQEFAASCCS4wggkqAgEAAoICAQDZUQLO9FvTEj0c
[...]
                  H45/ESlk8j8L+rUiAofifqiVXiAb3hqK
                  -----END PRIVATE KEY-----

    - filter_chain_match:
        server_names: ["www.usbank.com"]  # splicing w/ connect or w/o connect
      filters:
        - name: envoy.filters.network.sni_dynamic_forward_proxy
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.sni_dynamic_forward_proxy.v3.FilterConfig
            port_value: 443
            dns_cache_config:
              name: dynamic_forward_proxy_cache_config
              dns_lookup_family: V4_ONLY
        - name: envoy.tcp_proxy
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
            stat_prefix: tcp
            cluster: dynamic_forward_proxy_cluster_splicing

  clusters:
  - name: dynamic_forward_proxy_cluster_splicing
    connect_timeout: 1s
    lb_policy: CLUSTER_PROVIDED
    cluster_type:
      name: envoy.clusters.dynamic_forward_proxy
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
        dns_cache_config:
          name: dynamic_forward_proxy_cache_config
          dns_lookup_family: V4_ONLY

  - name: dynamic_forward_proxy_cluster_bumping
    connect_timeout: 1s
    lb_policy: CLUSTER_PROVIDED
    cluster_type:
      name: envoy.clusters.dynamic_forward_proxy
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
        dns_cache_config:
          name: dynamic_forward_proxy_cache_config
          dns_lookup_family: V4_ONLY
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          validation_context:
            trusted_ca:
              filename: /etc/ssl/certs/ca-certificates.crt
